# claude-finance

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: myfi.toml  settings.json  shepherd.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: release.yml
.shepherd/: .gitignore  CONVENTIONS.md
agents/: advisor.md  auditor.md  designer.md  quant.md  trader.md  worker.md
agents/evals/: advisor_bad.md  advisor_good.md  auditor_bad.md  auditor_good.md  designer_bad.md  designer_good.md  quant_bad.md  quant_good.md  trader_bad.md  trader_good.md  (+2 more)
commands/: analyze.md  plan.md  taxes.md  trade.md
docs/: commands.md  configuration.md  flock.md  install.md  marketdata.md  toolkit.md
hooks/: hooks.json
services/toolkit/: README.md  pyproject.toml
services/toolkit/myfi_toolkit/: __init__.py  cli.py  config.py  mcp_server.py  tools.py
services/toolkit/myfi_toolkit/marketdata/: __init__.py  contract.py  registry.py  research.py
services/toolkit/myfi_toolkit/myctx/: __init__.py  db.py  migrate.py
services/toolkit/myfi_toolkit/myctx/schema/: 0001_init.sql
services/toolkit/myfi_toolkit/myctx/schema/migrations/: 0002_v_mem_recent_7d_updated_at.sql
services/toolkit/tests/: test_cli.py  test_config.py  test_marketdata.py  test_mcp_smoke.py  test_myctx.py  test_tools.py
services/toolkit/tests/evals/: bad_tool_output.txt  good_tool_output.txt  marketdata_bad.txt  marketdata_good.txt
(+113 files in other folders)
